# UI-4-SD

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
src/: config.rs  decompiler.rs  error.rs  lib.rs  main.rs  server.rs  state.rs  static_files.rs
src/api/: dto.rs  export.rs  export_dto.rs  history.rs  mod.rs  packages.rs  packages_dto.rs  profile_merge.rs  profiles.rs  projects.rs  registry_catalog.rs  search_api.rs  storage.rs  validation.rs
src/base/: mod.rs
src/engine/: config.rs  document_manager.rs  engine.rs  events.rs  mod.rs
src/export/: deterministic.rs  differential_generator.rs  element_serializer.rs  error.rs  field_preservation.rs  mod.rs  sd_exporter.rs  snapshot_generator.rs
src/fsh/: error.rs  export.rs  import.rs  mapper.rs  mod.rs
src/import/: constraint_extractor.rs  element_builder.rs  error.rs  mod.rs  sd_parser.rs  slicing_importer.rs
src/ir/: constraint.rs  document.rs  element.rs  mod.rs  resource.rs  slicing.rs  tracking.rs  validation.rs
src/merge/: mod.rs
src/operations/: constraint.rs  error.rs  extension.rs  invariant.rs  mod.rs  slicing.rs  traits.rs
src/project/: mod.rs  model.rs  service.rs
src/validation/: diagnostic.rs  engine.rs  mod.rs  quick_fix.rs
tasks/: README.md  TASK_SUMMARY.md
tasks/backend/: 01-toolchain-alignment.md  02-ir-data-model.md  03-sd-import.md  04-sd-export.md  05-axum-server-setup.md  06-profile-api-endpoints.md  07-export-api-endpoints.md  08-fsh-import-export.md  09-validation-engine.md  10-package-management.md  11-search-api-endpoints.md  12-validation-api-endpoints.md  13-operations-engine.md  14-undo-redo-system.md  15-project-management.md  16-round-trip-testing.md  17-profile-builder-engine.md  18-performance-optimization.md
tasks/ui/: 01-react-app-scaffold.md  02-app-initialization-routing.md  03-mock-data-layer.md  04-element-tree-viewer.md  05-inspector-panel.md  06-cardinality-editor.md  07-flags-editor.md  08-type-constraint-editor.md  09-binding-editor-integration.md  09-binding-editor.md  10-slicing-wizard.md  11-extension-picker.md  12-search-ui.md  13-diagnostics-panel.md  14-preview-panel.md  15-package-browser.md  16-undo-redo-ui.md  17-quick-constraints-panel.md  18-project-templates-ui.md  19-profile-editor-page.md  20-package-management-ui.md  20-testing-infrastructure.md
web/: .env.development  .env.example  .env.production  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx
web/src/app/: App.tsx
workspace/my-best-project/: project.json
workspace/test/: project.json
(+273 files in other folders)
